--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
 body {
   margin: 0;
-  padding: 0;
-  font-family: sans-serif; }
+  padding: 0 1rem;
+  font-family: sans-serif;
+  font-size: 100%; }
