--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,10 @@
+@import url("https://fonts.googleapis.com/css?family=Palanquin|Russo+One");
 body {
   margin: 0;
-  padding: 0 1rem;
-  font-family: sans-serif;
-  font-size: 100%; }
+  padding: 0;
+  font-family: 'Palanquin', sans-serif;
+  font-size: 100%;
+  background-color: #eaeef5; }
 
 h1, h2, h3, h4, h5 {
   margin: .5rem; }
