--- a/src/App.scss
+++ b/src/App.scss
@@ -1,9 +1,13 @@
+@import url('https://fonts.googleapis.com/css?family=Palanquin|Russo+One');
+
 body {
   margin: 0;
-  padding: 0 1rem;
+  padding: 0;
 
-  font-family: sans-serif;
+  font-family: 'Palanquin', sans-serif;
   font-size: 100%;  
+
+  background-color: rgb(234, 238, 245);
 }
 
 h1, h2, h3, h4, h5 {
