--- a/src/Header/Header.css
+++ b/src/Header/Header.css
@@ -1,4 +1,9 @@
 .header {
   display: flex;
   flex-direction: row;
-  justify-content: center; }
+  justify-content: center;
+  background-color: #fff;
+  width: 100%;
+  box-shadow: 0 0.25rem 0.5rem #b6b6b6; }
+  .header h1 {
+    font-family: 'Russo One', sans-serif; }
