--- a/src/home/search/Search.css
+++ b/src/home/search/Search.css
@@ -1,7 +1,8 @@
 .search {
   display: flex;
   flex-direction: column;
-  justify-content: center; }
+  justify-content: center;
+  align-items: center; }
   .search__header {
     display: flex;
     justify-content: center; }
@@ -10,8 +11,15 @@
     justify-content: center; }
   .search__input {
     width: 80vw;
-    border: 1px solid gray;
-    padding: .5rem; }
+    border: 1px solid #e4e4e4;
+    padding: .5rem;
+    border-radius: 4px; }
   .search__results {
-    height: 30vh;
+    max-height: 30vh;
+    width: 80vw;
+    padding: .5rem;
+    background-color: white;
+    box-shadow: inset 0 0 0.5rem #b6b6b6;
+    border-radius: 4px;
+    list-style: none;
     overflow-y: scroll; }
