--- a/src/home/topRated/TopRated.css
+++ b/src/home/topRated/TopRated.css
@@ -1,14 +1,33 @@
 .top-rated {
-  height: 35vh; }
+  height: 100%; }
   .top-rated__header {
     display: flex;
     justify-content: center; }
   .top-rated__list {
     display: flex;
-    list-style: none;
     overflow-X: scroll;
-    padding: 0; }
-  .top-rated__game {
+    margin: 1rem 0; }
+  .top-rated__card {
     display: flex;
     flex-direction: column;
-    margin: 0 1rem; }
+    flex: 0 0 auto;
+    background-color: #fff;
+    box-shadow: 0 0 1rem #b6b6b6;
+    border-radius: 4px;
+    height: 40vh;
+    width: 50vw;
+    padding: 1rem;
+    margin: .5rem; }
+  .top-rated__name {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    text-align: center;
+    line-height: 1.3;
+    margin: 0;
+    padding: 0; }
+  .top-rated__year {
+    display: flex;
+    justify-content: space-around;
+    margin: 0;
+    padding: 0; }
