--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,5 @@ body {
   padding: 0;
   font-family: 'Palanquin', sans-serif;
   font-size: 100%;
-  background-color: #eaeef5; }
-
-h1, h2, h3, h4, h5 {
-  margin: .5rem; }
+  background-color: #eaeef5;
+  line-height: 1.3; }
