--- a/src/App.scss
+++ b/src/App.scss
@@ -8,8 +8,6 @@ body {
   font-size: 100%;  
 
   background-color: rgb(234, 238, 245);
-}
 
-h1, h2, h3, h4, h5 {
-  margin: .5rem;
+  line-height: 1.3;
 }
