--- a/src/Header/Header.css
+++ b/src/Header/Header.css
@@ -1,9 +1,10 @@
 .header {
   display: flex;
-  flex-direction: row;
   justify-content: center;
   background-color: #fff;
   width: 100%;
-  box-shadow: 0 0.25rem 0.5rem #b6b6b6; }
+  box-shadow: 0 0.25rem 0.5rem #b6b6b6;
+  font-family: 'Russo One', sans-serif;
+  color: #0a2942; }
   .header h1 {
-    font-family: 'Russo One', sans-serif; }
+    margin: .5rem; }
