--- a/src/gameDetail/GameDetail.css
+++ b/src/gameDetail/GameDetail.css
@@ -1,26 +1,35 @@
 .game {
   display: flex;
-  flex-direction: column; }
+  flex-direction: column;
+  justify-content: center;
+  padding: 1rem;
+  margin: 1rem;
+  background-color: #fff;
+  box-shadow: 0 0 1rem #b6b6b6;
+  border-radius: 4px; }
   .game__name {
     display: flex;
-    justify-content: center; }
+    justify-content: center;
+    margin: 0;
+    color: #1c4c72;
+    text-align: center; }
   .game__year {
     display: flex;
-    justify-content: center; }
+    justify-content: center;
+    margin: .5rem; }
   .game__players {
     display: flex;
-    justify-content: center; }
+    justify-content: center;
+    margin: .5rem; }
   .game__attribute-collection {
     display: flex;
-    flex-direction: row;
     flex-wrap: wrap;
-    justify-content: center; }
-  .game__attribute-collection-member {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    padding: 0 .5rem; }
+    justify-content: center;
+    text-align: center; }
   .game__add-button {
-    border: 1px solid blue;
-    background-color: transparent;
-    margin: 1rem 0; }
+    border-radius: 4px;
+    background-color: #245e8d;
+    color: #fff;
+    margin: .5rem 0;
+    height: 2rem;
+    font-size: 1rem; }
