--- a/src/gameDetail/GameDetail.scss
+++ b/src/gameDetail/GameDetail.scss
@@ -9,7 +9,7 @@
   background-color: #fff;    
   box-shadow: 0 0 1rem rgb(182, 182, 182);
   border-radius: 4px;
-
+  
   &__name {
     display: flex;
     justify-content: center;
@@ -30,6 +30,18 @@
     margin: .5rem;
   }
 
+  &__image {
+    display: flex;
+    align-self: center;
+    flex: 1 1 auto;
+
+    max-height: 380px;
+    max-width: 760px;
+    width: 80vw;
+
+    margin: 1rem 0;
+  }
+
   &__attribute-collection {
     display: flex;
     flex-wrap: wrap;
@@ -37,12 +49,21 @@
     text-align: center;
   }
 
+  &__collection-type {
+    margin: 0 .5rem;
+  }
+
   &__add-button {
+    display: flex;
+    align-self: center;
+    
     border-radius: 4px;
     background-color: rgb(36, 94, 141);
+
     color: #fff;
+    font-size: 1rem;
+
     margin: .5rem 0;
     height: 2rem;
-    font-size: 1rem;
   }
 }
