--- a/src/home/topRated/TopRated.css
+++ b/src/home/topRated/TopRated.css
@@ -10,12 +10,14 @@
   .top-rated__card {
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
     flex: 0 0 auto;
     background-color: #fff;
     box-shadow: 0 0 1rem #b6b6b6;
     border-radius: 4px;
     height: 40vh;
     width: 50vw;
+    max-width: 200px;
     padding: 1rem;
     margin: .5rem; }
   .top-rated__name {
@@ -30,3 +32,19 @@
     justify-content: space-around;
     margin: 0;
     padding: 0; }
+  .top-rated__add-button {
+    border-radius: 4px;
+    background-color: #245e8d;
+    color: #fff;
+    font-size: 1rem;
+    margin: .5rem 0;
+    height: 2rem; }
+  .top-rated__content-wrapper {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    flex: 0 1 auto; }
+  .top-rated__thumbnail {
+    display: flex;
+    align-self: center;
+    flex: 0 1 auto; }
